feat: add visuals to the talk "Recruter vos développeurs en 2018"

--- a/talk/Recruter-vos-developpeurs/index.html
+++ b/talk/Recruter-vos-developpeurs/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>Recruter vos developpeurs en 2018</title>
+  <title>Recruter vos developpeurs</title>
   <style type="text/css">
     /* Color Palette Based on Monokai
 
@@ -654,7 +654,7 @@ body {
 .slide-content {
 	font-size: 0.9em;
 	font-family: 'Helvetica Neue', Helvetica;
-	width: 80%;
+	width: 90%;
 	/*height:780px;*/
 	margin-top:40px;
 }
@@ -664,8 +664,9 @@ body {
 }
 
 h1 {
-	font-size: 2.5em;
+	font-size: 3em;
 	text-shadow: 1px 2px 4px #191919;
+	color: #FFF;
 }
 
 h2 {
@@ -757,6 +758,97 @@ pre {
 /*
 Slides
  */
+#slide-1 {
+	background: url('assets/01.jpg');
+  	background-size: cover;
+}
+
+#slide-3 {
+	background: url('assets/02.jpg');
+  	background-size: cover;
+}
+
+#slide-5 {
+	background: url('assets/05.jpg');
+  	background-size: cover;
+}
+
+#slide-7 {
+	background: url('assets/10.jpg');
+  	background-size: cover;
+}
+
+#slide-10 {
+	background: url('assets/11.jpg');
+  	background-size: cover;
+}
+
+
+
+#slide-12 {
+	background: url('assets/08.jpg');
+  	background-size: cover;
+}
+
+
+
+#slide-14 {
+	background: url('assets/12.jpg');
+  	background-size: cover;
+}
+
+
+
+#slide-17 {
+	background: url('assets/13.jpg');
+  	background-size: cover;
+}
+
+
+#slide-19 {
+	background: url('assets/15.jpg');
+  	background-size: cover;
+}
+
+
+#slide-24 {
+	background: url('assets/16.jpg');
+  	background-size: cover;
+}
+
+
+#slide-26 {
+	background: url('assets/17.jpg');
+  	background-size: cover;
+}
+
+#slide-29 {
+	background: url('assets/20.jpg');
+  	background-size: cover;
+}
+
+#slide-31 {
+	background: url('assets/19.jpg');
+  	background-size: cover;
+}
+
+#slide-33 {
+	background: url('assets/18.jpg');
+  	background-size: cover;
+}
+
+#slide-34 {
+	background: url('assets/21.jpg');
+  	background-size: cover;
+}
+
+
+
+
+#slide-22 {
+	background: url('assets/09.jpg');
+  	background-size: cover;
+}
 
   </style>
 </head>
@@ -766,32 +858,41 @@ Slides
   </div>
 
   <div class="slide" id="slide-1">
-    <section class="slide-content"><h1 id="recruter-vos-developpeurs-en-2018">Recruter vos developpeurs en 2018</h1>
+    <section class="slide-content"><h1 id="recruter-vos-developpeurs-">Recruter vos <strong>developpeurs</strong></h1>
+<h2 id="retour-d-exp-rience">Retour d&#39;expérience</h2>
 </section>
   </div>
   <div class="slide hidden" id="slide-2">
     <section class="slide-content"><h3 id="contexte-iwd">Contexte IWD</h3>
 <ul>
 <li>SaaS dans le merchandising/marketing, grand compte</li>
-<li>~70 collaborateurs dont ~16 geek dans l&#39;équipe dev</li>
+<li>~70 collaborateurs dont ~16 dans l&#39;équipe dev</li>
 <li>Paris, New York, Singapore, Los Angeles, Bordeaux, Caen et Lyon</li>
 <li>Forte volonté d&#39;augmenter les effectifs et particulièrement dans mon équipe</li>
-<li>Difficulté à attirer des talents</li>
+<li>Difficulté à attirer des talents, IWD Who?</li>
 </ul>
 </section>
   </div>
   <div class="slide hidden" id="slide-3">
+    <section class="slide-content"><h1 id="objectifs">Objectifs</h1>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-4">
     <section class="slide-content"><h3 id="objectifs">Objectifs</h3>
 <ul>
 <li>Pouvoir interragir avec plus de candidats</li>
 <li>Etre autonome (ne pas dépendre d&#39;un cabinet ou de RH)</li>
 <li>Pouvoir déleguer à n&#39;importe quelles étapes du processus</li>
 <li>Ne pas être dépendant de moi</li>
-<li>Travailler/communiquer notre &quot;image employeur&quot;</li>
+<li>Travailler/communiquer notre &quot;image employeur&quot; =&gt; IWD is a fucking place to work!!</li>
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-4">
+  <div class="slide hidden" id="slide-5">
+    <section class="slide-content"><h1 id="processus">Processus</h1>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-6">
     <section class="slide-content"><h3 id="processus">Processus</h3>
 <ul>
 <li>Annonce</li>
@@ -806,20 +907,24 @@ Slides
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-5">
-    <section class="slide-content"><h3 id="annonce-1-2">Annonce 1/2</h3>
+  <div class="slide hidden" id="slide-7">
+    <section class="slide-content"><h1 id="l-annonce">L&#39;annonce</h1>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-8">
+    <section class="slide-content"><h3 id="l-annonce-1-2">L&#39;annonce 1/2</h3>
 <ul>
 <li>Les <strong>valeurs</strong> de la société doivent transpirer</li>
 <li>Etre <strong>honnête</strong>, ne pas cacher du legacy par exemple 😅</li>
 <li>Donner un maximum de détails sur le <strong>contexte</strong> du job</li>
-<li>Ne pas tutoyer</li>
+<li>Ne pas tuttoyer</li>
 <li>Ne pas rédiger en mode kikool startup franglais t&#39;as vu</li>
 <li>Donner le <strong>SALAIRE 🙏</strong> ou une fourchette</li>
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-6">
-    <section class="slide-content"><h3 id="annonce-2-2">Annonce 2/2</h3>
+  <div class="slide hidden" id="slide-9">
+    <section class="slide-content"><h3 id="l-annonce-2-2">L&#39;annonce 2/2</h3>
 <ul>
 <li>Introduire la société</li>
 <li>L&#39;équipe</li>
@@ -831,7 +936,11 @@ Slides
 <p>Exemple: <a href="https://www.welcometothejungle.co/companies/iwd/jobs/developpeu-r-se-web-experimente_paris">Dev senior</a> et <a href="https://www.welcometothejungle.co/companies/iwd/jobs/senior-ops_paris">Ops</a></p>
 </section>
   </div>
-  <div class="slide hidden" id="slide-7">
+  <div class="slide hidden" id="slide-10">
+    <section class="slide-content"><h1 id="sourcing">Sourcing</h1>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-11">
     <section class="slide-content"><h3 id="sourcing">Sourcing</h3>
 <p>Comment trouver les candidats?</p>
 <ul>
@@ -842,7 +951,11 @@ Slides
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-8">
+  <div class="slide hidden" id="slide-12">
+    <section class="slide-content"><h1 id="1er-contact-par-email">1er contact par email</h1>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-13">
     <section class="slide-content"><h3 id="1er-contact-par-email">1er contact par email</h3>
 <p>Phase d&#39;accroche, de séduction 💕</p>
 <ul>
@@ -854,7 +967,11 @@ Slides
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-9">
+  <div class="slide hidden" id="slide-14">
+    <section class="slide-content"><h1 id="video-conf-rence">Video conférence</h1>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-15">
     <section class="slide-content"><h3 id="video-conf-rence-1-2">Video conférence 1/2</h3>
 <blockquote>
 <p>&quot;La première impression est toujours la bonne&quot;  </p>
@@ -869,7 +986,7 @@ Slides
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-10">
+  <div class="slide hidden" id="slide-16">
     <section class="slide-content"><h3 id="video-conf-rence-2-2">Video conférence 2/2</h3>
 <p>Questions &quot;techniques&quot;:</p>
 <ul>
@@ -886,13 +1003,21 @@ Slides
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-11">
+  <div class="slide hidden" id="slide-17">
+    <section class="slide-content"><h1 id="arr-t-du-processus-">Arrêt du processus 😩</h1>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-18">
     <section class="slide-content"><h3 id="arr-t-du-processus-">Arrêt du processus 😩</h3>
 <p>Si c&#39;est le candidat qui arrête, répondre de manière positive &quot;bonne chance pour ton nouveau job&quot;... On ne sait jamais, on se recroisera peut-être. Ne pas oublier de le sourcer.</p>
 <p>Si c&#39;est vous, restez formel mais toujorus positif. Si après votre refus le candidat vous demande pourquoi, soyez franc et direct, c&#39;est le meilleur service que vous pouvez lui rendre.</p>
 </section>
   </div>
-  <div class="slide hidden" id="slide-12">
+  <div class="slide hidden" id="slide-19">
+    <section class="slide-content"><h1 id="challenge-technique">Challenge technique</h1>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-20">
     <section class="slide-content"><h3 id="challenge-technique-1-2">Challenge technique 1/2</h3>
 <ul>
 <li>Fait à la maison</li>
@@ -905,7 +1030,7 @@ Slides
 <p>Example: <a href="https://github.com/iwonderanddev/tech-challenges">Challenge IWD</a></p>
 </section>
   </div>
-  <div class="slide hidden" id="slide-13">
+  <div class="slide hidden" id="slide-21">
     <section class="slide-content"><h3 id="challenge-technique-2-2">Challenge technique 2/2</h3>
 <p>Ce qu&#39;on cherche à voir:</p>
 <ul>
@@ -917,7 +1042,11 @@ Slides
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-14">
+  <div class="slide hidden" id="slide-22">
+    <section class="slide-content"><h1 id="rencontre-paris">Rencontre à Paris</h1>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-23">
     <section class="slide-content"><h3 id="rencontre-paris">Rencontre à Paris</h3>
 <blockquote>
 <p>Dans 90% on a très envie de recruter le candidat</p>
@@ -934,7 +1063,11 @@ Slides
 </blockquote>
 </section>
   </div>
-  <div class="slide hidden" id="slide-15">
+  <div class="slide hidden" id="slide-24">
+    <section class="slide-content"><h1 id="yeah-mother-fucker-">Yeah mother fucker 😁 🙌 ✌ 🚀 🌈 🎉 🎊</h1>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-25">
     <section class="slide-content"><h3 id="yeah-mother-fucker-">Yeah mother fucker 😁 🙌 ✌ 🚀 🌈 🎉 🎊</h3>
 <p>Le plus dure est fait.</p>
 <p>Il faut rapidement que la proposition d&#39;embauche lui parvienne, puis le contrat pour sécuriser l&#39;embauche.</p>
@@ -943,12 +1076,16 @@ Slides
 <p>Si remote, prévoir l&#39;hébergement pour le premier mois sur Paris (3j/semaines)</p>
 </section>
   </div>
-  <div class="slide hidden" id="slide-16">
+  <div class="slide hidden" id="slide-26">
+    <section class="slide-content"><h1 id="suivi">Suivi</h1>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-27">
     <section class="slide-content"><h3 id="suivi-1-2">Suivi 1/2</h3>
 <p><img src="assets/kanban.jpg" alt="Suivi"></p>
 </section>
   </div>
-  <div class="slide hidden" id="slide-17">
+  <div class="slide hidden" id="slide-28">
     <section class="slide-content"><h3 id="suivi-1-2">Suivi 1/2</h3>
 <p>Kanban:</p>
 <ul>
@@ -967,7 +1104,11 @@ Slides
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-18">
+  <div class="slide hidden" id="slide-29">
+    <section class="slide-content"><h1 id="bilan">Bilan</h1>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-30">
     <section class="slide-content"><h3 id="bilan">Bilan</h3>
 <p>Sur la dernière années:</p>
 <ul>
@@ -978,10 +1119,15 @@ Slides
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-19">
-    <section class="slide-content"><h3 id="t-moignage-damien-pobel">Témoignage Damien Pobel</h3>
+  <div class="slide hidden" id="slide-31">
+    <section class="slide-content"><h1 id="t-moignage">Témoignage</h1>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-32">
+    <section class="slide-content"><h3 id="damien-pobel-lead-developer">Damien Pobel, Lead developer</h3>
 <blockquote>
-<p>Lead developer à Lyon, il est notre dernière recrue<br>🙏 ajouter le sur twitter sinon je dois retirer cette slide <a href="https://twitter.com/dpobel">@dpobel</a></p>
+<p>Il est notre dernière recrue à Lyon.
+🙏 ajouter le sur twitter sinon je dois retirer cette slide <a href="https://twitter.com/dpobel">@dpobel</a></p>
 </blockquote>
 <p>Qu&#39;est-ce qui t&#39;as donner envie de répondre à ma solicition sur talen.io?</p>
 <p>Le process de recrutement était claire. Le fait que ça se passe sur talent.io, la relation est un peu inversée et donc à priori si on est contacté ce que ça paraît coller côté recruteur.<br>La vidéo exprimait bien le contexte du job, de l&#39;équipe et de la société.</p>
@@ -994,17 +1140,17 @@ Slides
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-20">
+  <div class="slide hidden" id="slide-33">
     <section class="slide-content"><h1 id="merci">Merci</h1>
 <p><br/>
 Relecture, critiques, pull requests 😉<br><a href="https://twitter.com/dpobel">@dpobel</a><br><a href="https://twitter.com/mbagur">@mbagur</a><br><a href="https://twitter.com/mikael_letang">@mikael_letang</a></p>
 </section>
   </div>
-  <div class="slide hidden" id="slide-21">
+  <div class="slide hidden" id="slide-34">
     <section class="slide-content"><h1 id="questions-">Questions?</h1>
 </section>
   </div>
-  <div class="slide hidden author-slide" id="slide-22">
+  <div class="slide hidden author-slide" id="slide-35">
     <section class="slide-content"><div class="author">
   <h1 class="name">Fabien Furet</h1>
     <h3 class="twitter">
