--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
 		<meta name="description" content="Fabien Furet / Développeur">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css" rel="stylesheet" type="text/css">
-		<!-- <link href="http://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet" type="text/css"> -->
-		<link href="https://fonts.googleapis.com/css?family=Cardo:700" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500" rel="stylesheet">
 		<style type="text/css">
 			.main {
-				font-family: 'Helvetica Neue', Helvetica;
+				font-family: 'Work Sans', sans-serif;
 				line-height: 1.5;
-				color: #555;
-
+				color: #173753;
 				margin-left: auto;
 				margin-right: auto;
 				max-width: 700px;
@@ -21,26 +19,34 @@
 				padding-right:1em;
 			}
 			h1 {
-				font-family: 'Cardo', serif;
-				font-size: 2.5em;
-				color:#0a8bfd;
-				margin-bottom: 40px;
+				font-family: 'Work Sans', sans-serif;
+				font-size: 3em;
+				color: #35ae77;
+				margin-bottom: 50px;
+				font-weight: 500;
 			}
 			h2 {
-				font-family: 'Cardo', serif;
-				font-size: 1.8em;
-				margin-top: 0px;
-				color: #191919;
-				border-bottom: 2px solid #191919;
-				padding-bottom:10px;
+				font-family: 'Work Sans', sans-serif;
+				font-size: 2em;
+				margin-top: 20px;
+				margin-bottom: 0px;
+				color:#0a8bfd;
+				font-weight: 500;
 			}
 			a {
 				color:#0a8bfd;
 			}
+			a:hover {
+				text-decoration: none;
+			}
 
 			.links {
-				margin-top: 60px;
+				margin-top: 90px;
 				font-size: 0.8em;
+			}
+
+			.links a {
+				color: #35ae77;
 			}
 
 			.aka {
@@ -49,38 +55,41 @@
 
 			.tag {
 				display: inline-block;
-				padding: 4px 8px;
-				font-weight: bold;
+				padding: 4px 6px;
 				line-height: 20px;
 				color: #fff;
 				text-align: center;
 				border-radius: 3px;
 				background-color: #999;
 				margin: 4px;
+				font-weight: 400;
 			}
 
 				.tag-level-1 {
 					background-color: #80e1ff;
-					font-size: 0.6em;
+					font-size: 0.5em;
 					padding: 2px 4px;
 				}
 				.tag-level-2 {
 					background-color: #6ed1ff;
-					font-size: 0.7em;
+					font-size: 0.6em;
 					padding: 3px 6px;
 				}
 				.tag-level-3 {
 					background-color: #5ec1ff;
-					font-size: 0.8em;
+					font-size: 0.7em;
 				}
 				.tag-level-4 {
 					background-color: #5cb0f9;
-					font-size: 0.9em;
+					font-size: 0.8em;
 				}
 				.tag-level-5 {
 					background-color: #0a8bfd;
-					font-size: 1em;
+					font-size: 0.9em;
 				}
+			.intro {
+				font-weight: 500;
+			}
 		</style>
 	</head>
 	<body>
@@ -90,11 +99,9 @@
 		<div class="main">
 			<h1 itemscope="" itemtype="http://data-vocabulary.org/Person"><span itemprop="name">Fabien Furet</span> <span class="aka">aka RETFU</span></h1>
 			<h2>Développeur web 🚀</h2>
-			<p>
-				Cela fait plus de 15 ans que j'évolue dans le milieu du web en backend et frontend.
-			</p>
-			<p>
-				Je suis CTO chez <a href="http://iwd.io">IWD</a> et j'assise l'équipe dev à produire des livrables de qualités, dans les temps et maintenable.
+			<p class="intro">
+				Cela fait plus de 15 ans que j'évolue dans le milieu du web en backend et frontend. <br />
+				Je suis CTO chez <a href="http://iwd.io">IWD</a> et j'aide l'équipe dev à produire des livrables de qualités, maintenable et dans les temps.
 			</p>
 			<p>
 				<span class="tag tag-level-5">html5</span> <span class="tag tag-level-3">redux</span> <span class="tag tag-level-4">leadership</span> <span class="tag tag-level-4">raml</span> <span class="tag tag-level-2">nginx</span> <span class="tag tag-level-5">as3</span> <span class="tag tag-level-2">cordova</span> <span class="tag tag-level-4">fms</span> <span class="tag tag-level-5">json schema</span> <span class="tag tag-level-5">continuous delivery</span> <span class="tag tag-level-5">css</span> <span class="tag tag-level-3">webpack</span> <span class="tag tag-level-5">unit test</span> <span class="tag tag-level-5">api rest</span> <span class="tag tag-level-5">continuous integration</span> <span class="tag tag-level-4">mysql</span> <span class="tag tag-level-3">yarn</span> <span class="tag tag-level-5">maintainability</span> <span class="tag tag-level-5">loose coupling</span> <span class="tag tag-level-5">php</span> <span class="tag tag-level-3">nodejs</span> <span class="tag tag-level-5">solid</span> <span class="tag tag-level-4">management</span> <span class="tag tag-level-2">couchdb</span> <span class="tag tag-level-5">dependency injection</span> <span class="tag tag-level-4">composer</span> <span class="tag tag-level-4">reactjs</span> <span class="tag tag-level-2">python</span> <span class="tag tag-level-4">indexeddb</span> <span class="tag tag-level-4">consistency</span> <span class="tag tag-level-5">interface</span> <span class="tag tag-level-4">apache</span> <span class="tag tag-level-2">jenkins</span> <span class="tag tag-level-1">nagios</span> <span class="tag tag-level-3">service worker</span> <span class="tag tag-level-2">gitlab</span> <span class="tag tag-level-5">http</span> <span class="tag tag-level-5">contract</span> <span class="tag tag-level-4">saas</span> <span class="tag tag-level-3">redis</span> <span class="tag tag-level-5">javascript</span> <span class="tag tag-level-5">mentoring</span> <span class="tag tag-level-2">pouchdb</span> <span class="tag tag-level-5">code review</span>
