feat: add talk "Recruter vos développeurs"

--- a/index.html
+++ b/index.html
@@ -109,10 +109,13 @@
 			<br/>
 			<h2>Talk</h2>
 			<p>
-				<strong>REST in peace</strong> (<a href="http://fabienfuret.net/talk/REST-in-peace">slides</a>)<br/>
-				Bonnes pratiques pour construire une API "REST" pragmatique et efficace en 2015.
+				<strong>Recruter vos développeurs</strong> (2018) <a href="http://fabienfuret.net/talk/Recruter-vos-developpeurs">slides</a><br/>
+				Retour d'expérience après 10 ans de recrutements dans mes équipes.
 				<br/><br/>
-				<strong>Standing desk WTF?</strong> (<a href="http://fabienfuret.net/talk/Standing-desk-WTF">slides</a>)<br/>
+				<strong>REST in peace</strong> (2015) <a href="http://fabienfuret.net/talk/REST-in-peace">slides</a><br/>
+				Bonnes pratiques pour construire une API "REST" pragmatique et efficace.
+				<br/><br/>
+				<strong>Standing desk WTF?</strong> (2014) <a href="http://fabienfuret.net/talk/Standing-desk-WTF">slides</a><br/>
 				Lighting talk sur mon retour d'expérience après 3 mois de standing desk.
 			</p>
 			<p class="links">
