--- a/talk/Recruter-vos-developpeurs/index.html
+++ b/talk/Recruter-vos-developpeurs/index.html
@@ -905,7 +905,12 @@ Slides
 <li>~70 collaborateurs dont ~16 dans l&#39;équipe dev 🚀</li>
 <li>Paris, New York, Singapore, Los Angeles, Bordeaux, Caen et Lyon</li>
 <li>Forte volonté d&#39;augmenter les effectifs et particulièrement dans l&#39;équipe dev 🚀</li>
-<li>Difficulté à attirer des talents, <a href="https://iwd.io">IWD</a> who?</li>
+<li>Difficulté à attirer des talents:<ul>
+<li>Tout le monde cherche des devs</li>
+<li>Grosse concurrence, surtout à Paris</li>
+<li><a href="https://iwd.io">IWD</a> who?</li>
+</ul>
+</li>
 </ul>
 </section>
   </div>
@@ -1064,7 +1069,7 @@ Slides
     <section class="slide-content"><h3 id="video-conf-rence-5-7">Video conférence 5/7</h3>
 <ul>
 <li>On ne juge pas, si pas de réponse, ce n&#39;est pas grave, ce n&#39;est pas un concours<blockquote>
-<p><strong>Qu’est qui fait qu’un code est bon?</strong><br>Découplage, injection de dépendance, orienté métier (&quot;DDD&quot;), coding style, tests, maintenabilité, évolutivité, ...<br><strong>A quoi sert une Interface en POO?</strong><br>Définir un contrat, découplage, injection de dépendance, évolutivité...<br><strong>De quoi est composée une requête HTTP?</strong><br>Connaissance du protocol, http2</p>
+<p><strong>Qu’est-ce qu’un code est bon?</strong><br>Découplage, injection de dépendance, orienté métier (&quot;DDD&quot;), coding style, tests, maintenabilité, évolutivité, ...<br><strong>A quoi sert une Interface en POO?</strong><br>Définir un contrat, découplage, injection de dépendance, évolutivité...<br><strong>De quoi est composée une requête HTTP?</strong><br>Connaissance du protocol, http2</p>
 </blockquote>
 </li>
 </ul>
@@ -1127,7 +1132,7 @@ Slides
 </ul>
 <blockquote>
 <p><code>Tips</code> prendre le temps d&#39;itérer sur le challenge, ça vaut le coup de l&#39;améliorer en fonction des rétours
-<code>Tips</code> faire plusieurs challenge dérivés en fonction du profil junior/sénior ou backend/frontend</p>
+<code>Tips</code> faire plusieurs challenges dérivés en fonction du profil junior/sénior ou backend/frontend</p>
 </blockquote>
 </section>
   </div>
@@ -1195,11 +1200,11 @@ Slides
     <section class="slide-content"><h3 id="bilan">Bilan</h3>
 <p>Sur la dernière année:</p>
 <ul>
-<li>Actuellement 12 candidats dans le pipe pour 3 postes (2 devs + ops)</li>
 <li>~70 candidats &quot;étudiés&quot;</li>
 <li>~30 vidéos conférence</li>
 <li>~20 challenges techique</li>
 <li>5 recrutements 🎉</li>
+<li>Actuellement 12 candidats dans le pipe pour 3 postes (2 devs + ops)</li>
 </ul>
 </section>
   </div>
