--- a/books/index.html
+++ b/books/index.html
@@ -1,122 +1,281 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>Fabien Furet</title>
-		<meta name="description" content="Fabien Furet / Développeur">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css" rel="stylesheet" type="text/css">
-		<link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500" rel="stylesheet">
-		<style type="text/css">
-			.main {
-				font-family: 'Work Sans', sans-serif;
-				line-height: 1.5;
-				color: #173753;
-				margin-left: auto;
-				margin-right: auto;
-				max-width: 700px;
-				padding-left:1em;
-				padding-right:1em;
-			}
-			h1 {
-				font-family: 'Work Sans', sans-serif;
-				font-size: 3em;
-				color: #35ae77;
-				margin-bottom: 50px;
-				font-weight: 500;
-			}
-			h2 {
-				font-family: 'Work Sans', sans-serif;
-				font-size: 2em;
-				margin-top: 20px;
-				margin-bottom: 0px;
-				color:#0a8bfd;
-				font-weight: 500;
-			}
-			a {
-				color:#0a8bfd;
-			}
-			a:hover {
-				text-decoration: none;
-			}
+  <head>
+    <meta charset="utf-8" />
+    <title>Fabien Furet Books</title>
+    <meta name="description" content="Fabien Furet / Books" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Work+Sans:400,500"
+      rel="stylesheet"
+    />
+    <link href="../style.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript">
+      var books = [
+        {
+          title: "Dormez tranquilles jusqu'en 2100",
+          readYear: 2020,
+          subtitle: "Et autre malentendus sur le climat et l'énergie",
+          author: "Jean-Marc Jancovici",
+          pages: 196,
+          year: 2017,
+          image: "cover/dormez-tranquile.jpg",
+          tag: "essai",
+          rating: "📚📚📚📚",
+          notes: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis elit non quam elementum efficitur. Quisque imperdiet augue a dolor semper gravida. Cras consequat vehicula feugiat. Vestibulum arcu elit, hendrerit sit amet augue non, interdum pellentesque nunc. Aliquam in dui at nisl aliquam faucibus. Vivamus congue posuere sem molestie dictum. Aenean eu imperdiet nulla. Proin efficitur maximus erat, quis ullamcorper lorem consectetur eget. Donec mollis lorem ac lacus commodo fermentum. Nunc justo ipsum, mollis non enim et,
+          condimentum facilisis risus. Morbi maximus vitae elit quis vehicula.`
+        },
+        {
+          title: "Le secret de l'Occident",
+          readYear: 2020,
+          subtitle: "Vers une théorie générale du progrès scientifique",
+          author: "David Cosandey",
+          pages: 865,
+          year: 2018,
+          image: "cover/secret-occident.jpg",
+          tag: "essai",
+          rating: "📚📚📚📚📚",
+          notes: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis elit non quam elementum efficitur. Quisque imperdiet augue a dolor semper gravida. Cras consequat vehicula feugiat. Vestibulum arcu elit, hendrerit sit amet augue non, interdum pellentesque nunc. Aliquam in dui at nisl aliquam faucibus. Vivamus congue posuere sem molestie dictum. Aenean eu imperdiet nulla. Proin efficitur maximus erat, quis ullamcorper lorem consectetur eget. Donec mollis lorem ac lacus commodo fermentum. Nunc justo ipsum, mollis non enim et,
+          condimentum facilisis risus. Morbi maximus vitae elit quis vehicula.`
+        },
+        {
+          title: "L’horloge de la nature: Prévoir le temps",
+          readYear: 2020,
+          subtitle: "Comprendre les saisons, les animaux et les plantes",
+          author: "Peter Wohlleben",
+          pages: 179,
+          year: 2018,
+          image: "cover/horloge-nature.jpg",
+          tag: "ecologie",
+          rating: "📚📚📚",
+          notes: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis elit non quam elementum efficitur. Quisque imperdiet augue a dolor semper gravida. Cras consequat vehicula feugiat. Vestibulum arcu elit, hendrerit sit amet augue non, interdum pellentesque nunc. Aliquam in dui at nisl aliquam faucibus. Vivamus congue posuere sem molestie dictum. Aenean eu imperdiet nulla. Proin efficitur maximus erat, quis ullamcorper lorem consectetur eget. Donec mollis lorem ac lacus commodo fermentum. Nunc justo ipsum, mollis non enim et,
+          condimentum facilisis risus. Morbi maximus vitae elit quis vehicula.`
+        },
+        {
+          title: "La Spirale du déclassement",
+          readYear: 2020,
+          subtitle: " Les désillusions des classes moyenness",
+          author: "Louis Chauvel",
+          pages: 188,
+          year: 2019,
+          image: "cover/la-spirale-declassement.jpg",
+          tag: "sociologie",
+          rating: "📚",
+          notes: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis elit non quam elementum efficitur. Quisque imperdiet augue a dolor semper gravida. Cras consequat vehicula feugiat. Vestibulum arcu elit, hendrerit sit amet augue non, interdum pellentesque nunc. Aliquam in dui at nisl aliquam faucibus. Vivamus congue posuere sem molestie dictum. Aenean eu imperdiet nulla. Proin efficitur maximus erat, quis ullamcorper lorem consectetur eget. Donec mollis lorem ac lacus commodo fermentum. Nunc justo ipsum, mollis non enim et,
+          condimentum facilisis risus. Morbi maximus vitae elit quis vehicula.`
+        },
+        {
+          title: "The Valley",
+          readYear: 2020,
+          subtitle: "Une histoire politique de la silicon valley",
+          author: "Fabien Benoit",
+          pages: 276,
+          year: 2019,
+          image: "cover/the-valley.jpg",
+          tag: "essai",
+          rating: "📚📚📚📚",
+          notes: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis elit non quam elementum efficitur. Quisque imperdiet augue a dolor semper gravida. Cras consequat vehicula feugiat. Vestibulum arcu elit, hendrerit sit amet augue non, interdum pellentesque nunc. Aliquam in dui at nisl aliquam faucibus. Vivamus congue posuere sem molestie dictum. Aenean eu imperdiet nulla. Proin efficitur maximus erat, quis ullamcorper lorem consectetur eget. Donec mollis lorem ac lacus commodo fermentum. Nunc justo ipsum, mollis non enim et,
+          condimentum facilisis risus. Morbi maximus vitae elit quis vehicula.`
+        },
+        {
+          title: "Le Modèle californien",
+          readYear: 2020,
+          subtitle: "Comment l'esprit collaboratif change le monde",
+          author: "Monique Dagnaud",
+          pages: 204,
+          year: 2016,
+          image: "cover/modele-californien.jpg",
+          tag: "essai",
+          rating: "? ? ?",
+          notes: `A lire 🤓`
+        },
+        {
+          title: "Homo Deus",
+          readYear: 2020,
+          subtitle: "Une brève histoire de l'avenir",
+          author: "Yuval Noah Harari",
+          pages: 464,
+          year: 2017,
+          image: "cover/home-deus.jpg",
+          tag: "essai",
+          rating: "📚📚",
+          notes: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis elit non quam elementum efficitur. Quisque imperdiet augue a dolor semper gravida. Cras consequat vehicula feugiat. Vestibulum arcu elit, hendrerit sit amet augue non, interdum pellentesque nunc. Aliquam in dui at nisl aliquam faucibus. Vivamus congue posuere sem molestie dictum. Aenean eu imperdiet nulla. Proin efficitur maximus erat, quis ullamcorper lorem consectetur eget. Donec mollis lorem ac lacus commodo fermentum. Nunc justo ipsum, mollis non enim et,
+          condimentum facilisis risus. Morbi maximus vitae elit quis vehicula. `
+        },
+        {
+          title: "Nos Ancêtres les Gaulois et autres fadaises",
+          subtitle: "L'histoire de France sans clichés",
+          author: "François Reynaet",
+          pages: 528,
+          year: 2010,
+          image: "cover/ancetres-gaulois.jpg",
+          tag: "histoire",
+          rating: "📚📚📚📚📚",
+          notes: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis elit non quam elementum efficitur. Quisque imperdiet augue a dolor semper gravida. Cras consequat vehicula feugiat. Vestibulum arcu elit, hendrerit sit amet augue non, interdum pellentesque nunc. Aliquam in dui at nisl aliquam faucibus. Vivamus congue posuere sem molestie dictum. Aenean eu imperdiet nulla. Proin efficitur maximus erat, quis ullamcorper lorem consectetur eget. Donec mollis lorem ac lacus commodo fermentum. Nunc justo ipsum, mollis non enim et,
+          condimentum facilisis risus. Morbi maximus vitae elit quis vehicula. `
+        },
+        {
+          title: "Les Vikings",
+          subtitle: null,
+          author: "Régis Boyer",
+          pages: 442,
+          year: 2015,
+          image: "cover/vikings.jpg",
+          tag: "histoire",
+          rating: "? ? ?",
+          notes: `A lire 🤓`
+        },
+        {
+          title: "Les origines franques Ve - IXe siècle",
+          subtitle: null,
+          author: "Stéphane Lebecq",
+          pages: 320,
+          year: 1990,
+          image: "cover/origines-franque.jpg",
+          tag: "histoire",
+          rating: "📚📚📚📚📚",
+          notes: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis elit non quam elementum efficitur. Quisque imperdiet augue a dolor semper gravida. Cras consequat vehicula feugiat. Vestibulum arcu elit, hendrerit sit amet augue non, interdum pellentesque nunc. Aliquam in dui at nisl aliquam faucibus. Vivamus congue posuere sem molestie dictum. Aenean eu imperdiet nulla. Proin efficitur maximus erat, quis ullamcorper lorem consectetur eget. Donec mollis lorem ac lacus commodo fermentum. Nunc justo ipsum, mollis non enim et,
+          condimentum facilisis risus. Morbi maximus vitae elit quis vehicula. `
+        },
+        {
+          title: "L'héritage des Charles",
+          readYear: 2020,
+          subtitle: "De la mort de Charlemagne aux environs de l'an mil",
+          author: "Laurent Theis",
+          pages: 288,
+          year: 2016,
+          image: "cover/lheritage-des-charles.jpg",
+          tag: "histoire",
+          rating: "📚📚📚📚📚",
+          notes: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis elit non quam elementum efficitur. Quisque imperdiet augue a dolor semper gravida. Cras consequat vehicula feugiat. Vestibulum arcu elit, hendrerit sit amet augue non, interdum pellentesque nunc. Aliquam in dui at nisl aliquam faucibus. Vivamus congue posuere sem molestie dictum. Aenean eu imperdiet nulla. Proin efficitur maximus erat, quis ullamcorper lorem consectetur eget. Donec mollis lorem ac lacus commodo fermentum. Nunc justo ipsum, mollis non enim et,
+          condimentum facilisis risus. Morbi maximus vitae elit quis vehicula.
+          Etiam at justo eu felis varius volutpat non euismod eros. Maecenas fermentum leo sed blandit egestas. Nam et augue semper, lacinia ex quis, rhoncus purus. Mauris scelerisque mi erat, in bibendum odio tincidunt ac.`
+        },
+        {
+          title: "L'Ordre seigneurial, XIe-XIIe siècle",
+          subtitle: null,
+          author: "Dominique Barthélemy",
+          pages: 320,
+          year: 1990,
+          image: "cover/lordre-segnerial.jpg",
+          tag: "histoire",
+          rating: "📚📚📚",
+          notes:
+            "my notesksd,f: sdf:skdf s:dfl skdflks dflsdkfl sldfld flsf sdfsdf "
+        },
+        {
+          title: "Temps d'équilibres, temps de ruptures, XIIIe siècle.",
+          subtitle: null,
+          author: "Monique Bourin-derruau",
+          pages: 338,
+          year: 1990,
+          image: "cover/temp-dequilibre.jpg",
+          tag: "histoire",
+          rating: "📚📚📚📚",
+          notes: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis elit non quam elementum efficitur. Quisque imperdiet augue a dolor semper gravida. Cras consequat vehicula feugiat. Vestibulum arcu elit, hendrerit sit amet augue non, interdum pellentesque nunc. Aliquam in dui at nisl aliquam faucibus. Vivamus congue posuere sem molestie dictum. Aenean eu imperdiet nulla. Proin efficitur maximus erat, quis ullamcorper lorem consectetur eget. Donec mollis lorem ac lacus commodo fermentum. Nunc justo ipsum, mollis non enim et,
+          condimentum facilisis risus. Morbi maximus vitae elit quis vehicula.
+          Etiam at justo eu felis varius volutpat non euismod eros. Maecenas fermentum leo sed blandit egestas. Nam et augue semper, lacinia ex quis, rhoncus purus. Mauris scelerisque mi erat, in bibendum odio tincidunt ac.`
+        },
+        {
+          title: "Temps de crises, temps d'espoirs, XIVe-XVe siècle.",
+          subtitle: null,
+          author: "Alain Demurger",
+          pages: 378,
+          year: 1990,
+          image: "cover/temps-de-crise.jpg",
+          tag: "histoire",
+          rating: "? ? ?",
+          notes: `A lire 🤓`
+        }
+      ];
 
-			.links {
-				margin-top: 90px;
-				font-size: 0.8em;
-			}
+      function toCamelCase(str) {
+        return str
+          .toLowerCase()
+          .replace(/[^a-zA-Z0-9]+(.)/g, function(match, chr) {
+            return chr.toUpperCase();
+          });
+      }
 
-			.links a {
-				color: #35ae77;
-			}
-
-			.aka {
-				font-size: 0.3em !important;
-			}
-
-			.tag {
-				display: inline-block;
-				padding: 4px 6px;
-				line-height: 20px;
-				color: #fff;
-				text-align: center;
-				border-radius: 3px;
-				background-color: #999;
-				margin: 4px;
-				font-weight: 400;
-			}
-
-				.tag-level-1 {
-					background-color: #80e1ff;
-					font-size: 0.5em;
-					padding: 2px 4px;
-				}
-				.tag-level-2 {
-					background-color: #6ed1ff;
-					font-size: 0.6em;
-					padding: 3px 6px;
-				}
-				.tag-level-3 {
-					background-color: #5ec1ff;
-					font-size: 0.7em;
-				}
-				.tag-level-4 {
-					background-color: #5cb0f9;
-					font-size: 0.8em;
-				}
-				.tag-level-5 {
-					background-color: #0a8bfd;
-					font-size: 0.9em;
-				}
-			.intro {
-				font-weight: 500;
-			}
-		</style>
-	</head>
-	<body>
-		<!--[if lt IE 11]>
-			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-		<![endif]-->
-		<div class="main">
-			<h1 itemscope="" itemtype="http://data-vocabulary.org/Person"><span itemprop="name">Fabien Furet</span> <span class="aka">aka RETFU</span></h1>
-			<h2>Livres</h2>
-			<p class="intro">
-				Liste de livre...
-			</p>
-			<p>
-        Livre 1
-</p>
-			
-			<p class="links">
-				<a href="https://github.com/RETFU">Github</a> - <a href="https://twitter.com/RETFU">Twitter</a> - <a href="https://fr.linkedin.com/in/fabienfuret">Linkedin</a>
-			</p>
-		</div>
-		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-		  ga('create', 'UA-57157993-1', 'auto');
-		  ga('send', 'pageview');
-		</script>
-	</body>
+      window.addEventListener("DOMContentLoaded", event => {
+        var template = document.querySelector("#book");
+        books.forEach(function(book) {
+          var clone = document.importNode(template.content, true);
+          clone.querySelector(".books img").src = book.image;
+          clone.querySelector(".books img").alt = book.title;
+          clone.querySelector(".books h3 a").textContent = book.title;
+          clone.querySelector(".books h3 a").href = `#${toCamelCase(
+            book.title
+          )}`;
+          clone.querySelector(".books h3 a").id = `#${toCamelCase(book.title)}`;
+          if (book.subtitle !== null)
+            clone.querySelector(".books .sub-title").textContent =
+              book.subtitle;
+          clone.querySelector(
+            ".books .details"
+          ).textContent = `${book.author} - ${book.year} - ${book.pages}`;
+          clone.querySelector(".books .tag").textContent = book.tag;
+          clone.querySelector(".books .rating").textContent = book.rating;
+          clone.querySelector(".books .notes").textContent = book.notes;
+          document.querySelector("#main-books").appendChild(clone);
+        });
+      });
+    </script>
+  </head>
+  <body>
+    <div class="main">
+      <h1 itemscope="" itemtype="http://data-vocabulary.org/Person">
+        <span itemprop="name">Fabien Furet</span>
+        <span class="aka">aka RETFU</span>
+      </h1>
+      <h2>Books I’ve read 📚</h2>
+      <p class="intro">
+        Quick notes to keep track of my reading and to share.My books are mostly
+        in french, start this in 2020. Have fun.
+      </p>
+      <br />
+      <div id="main-books">
+        <template id="book">
+          <div class="books">
+            <img src="" alt="" />
+            <div>
+              <h3><a href=""></a></h3>
+              <p class="sub-title"></p>
+              <p class="details"></p>
+              <span class="tag"></span><span class="rating"></span>
+              <p class="notes"></p>
+            </div>
+          </div>
+        </template>
+      </div>
+    </div>
+    <script>
+      (function(i, s, o, g, r, a, m) {
+        i["GoogleAnalyticsObject"] = r;
+        (i[r] =
+          i[r] ||
+          function() {
+            (i[r].q = i[r].q || []).push(arguments);
+          }),
+          (i[r].l = 1 * new Date());
+        (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m);
+      })(
+        window,
+        document,
+        "script",
+        "//www.google-analytics.com/analytics.js",
+        "ga"
+      );
+      ga("create", "UA-57157993-1", "auto");
+      ga("send", "pageview");
+    </script>
+  </body>
 </html>
