--- a/index.html
+++ b/index.html
@@ -93,33 +93,11 @@
         Lighting talk sur mon retour d'expérience après 3 mois de standing desk.
       </p>
       <p class="links">
+        <a href="/books">Livres</a> -
         <a href="https://github.com/RETFU">Github</a> -
         <a href="https://twitter.com/RETFU">Twitter</a> -
         <a href="https://fr.linkedin.com/in/fabienfuret">Linkedin</a>
       </p>
     </div>
-    <script>
-      (function(i, s, o, g, r, a, m) {
-        i["GoogleAnalyticsObject"] = r;
-        (i[r] =
-          i[r] ||
-          function() {
-            (i[r].q = i[r].q || []).push(arguments);
-          }),
-          (i[r].l = 1 * new Date());
-        (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m);
-      })(
-        window,
-        document,
-        "script",
-        "//www.google-analytics.com/analytics.js",
-        "ga"
-      );
-      ga("create", "UA-57157993-1", "auto");
-      ga("send", "pageview");
-    </script>
   </body>
 </html>
