feat(book): add "Ma vie en rouge et blanc"

--- a/books/index.html
+++ b/books/index.html
@@ -19,6 +19,16 @@
     <script type="text/javascript">
       var books = [{
           year: 2021, books: [{
+            title: "Ma vie en rouge et blanc",
+            subtitle: null,
+            author: "Arsène Wenger",
+            pages: 270,
+            year: 2020,
+            image: "https://images-na.ssl-images-amazon.com/images/I/41TM+Vb-1fL._SX312_BO1,204,203,200_.jpg",
+            tag: "histoire",
+            rating: "???",
+            link: "https://www.editions-jclattes.fr/livre/ma-vie-en-rouge-et-blanc-9782709666336/"
+          },{
             title: "Temps de crises, temps d'espoirs, XIVe-XVe siècle.",
             subtitle: null,
             author: "Alain Demurger",
@@ -26,7 +36,7 @@
             year: 1990,
             image: "cover/temps-de-crise.jpg",
             tag: "histoire",
-            rating: "? ? ?",
+            rating: "📚📚📚📚",
             link: "https://www.seuil.com/ouvrage/temps-de-crises-temps-d-espoirs-alain-demurger/9782020122214"
           }]
         }, {
