feat(book): add Le bonheur était pour demain

--- a/books/index.html
+++ b/books/index.html
@@ -19,6 +19,16 @@
     <script type="text/javascript">
       var books = [{
           year: 2021, books: [{
+            title: "Le bonheur était pour demain",
+            subtitle: "Les rêveries d'un ingénieur solitaire.",
+            author: "Philippe Bihouix",
+            pages: 384,
+            year: 2019,
+            image: "cover/le-bonheur-etait-pour-demain.jpg",
+            tag: "ecologie",
+            rating: "📚📚📚📚",
+            link: "https://www.seuil.com/ouvrage/le-bonheur-etait-pour-demain-philippe-bihouix/9782021388619"
+          },{
             title: "Ma vie en rouge et blanc",
             subtitle: null,
             author: "Arsène Wenger",
@@ -26,7 +36,7 @@
             year: 2020,
             image: "https://images-na.ssl-images-amazon.com/images/I/41TM+Vb-1fL._SX312_BO1,204,203,200_.jpg",
             tag: "histoire",
-            rating: "???",
+            rating: "📚📚",
             link: "https://www.editions-jclattes.fr/livre/ma-vie-en-rouge-et-blanc-9782709666336/"
           },{
             title: "Temps de crises, temps d'espoirs, XIVe-XVe siècle.",
