feat: add "Une belle histoire de l'Homme" & "Le monde chinois"

--- a/books/index.html
+++ b/books/index.html
@@ -19,6 +19,26 @@
     <script type="text/javascript">
       var books = [{
           year: 2021, books: [{
+            title: "Le monde chinois",
+            subtitle: "Tome 1, De l'Age de Bronze au Moyen Age",
+            author: "Jacques Gernet",
+            pages: 384,
+            year: 2006,
+            image: "cover/le-monde-chinois.jpg",
+            tag: "histoire",
+            rating: "??",
+            link: "https://www.decitre.fr/livres/le-monde-chinois-9782266153683.html"
+          },{
+            title: "Une belle histoire de l'Homme",
+            subtitle: "",
+            author: "Evelyne Heyer",
+            pages: 320,
+            year: 2017,
+            image: "cover/une-belle-histoire-de-lhomme.jpg",
+            tag: "histoire",
+            rating: "📚📚📚📚",
+            link: "https://editions.flammarion.com/une-belle-histoire-de-lhomme/9782081366718"
+          },{
             title: "Le bonheur était pour demain",
             subtitle: "Les rêveries d'un ingénieur solitaire.",
             author: "Philippe Bihouix",
@@ -35,7 +55,7 @@
             pages: 270,
             year: 2020,
             image: "https://images-na.ssl-images-amazon.com/images/I/41TM+Vb-1fL._SX312_BO1,204,203,200_.jpg",
-            tag: "histoire",
+            tag: "sport",
             rating: "📚📚",
             link: "https://www.editions-jclattes.fr/livre/ma-vie-en-rouge-et-blanc-9782709666336/"
           },{
@@ -290,11 +310,11 @@
           <div class="books">
             <img src="" alt="" />
             <div>
+              <span class="tag"></span>
               <h3 class="title"><a href=""></a></h3>
               <p class="sub-title"></p>
               <p class="details"></p>
               <span class="rating"></span><br/><br/>
-              <span class="tag"></span>
               <!-- <p class="notes"></p> -->
             </div>
           </div>
