feat: add naissance de la france

--- a/books/index.html
+++ b/books/index.html
@@ -19,6 +19,16 @@
     <script type="text/javascript">
       var books = [{
           year: 2021, books: [{
+            title: "Naissance de la France",
+            subtitle: "Le monde mérovingien",
+            author: "Patrick Geary",
+            pages: 292,
+            year: 2011,
+            image: "cover/naissance-de-la-france.jpeg",
+            tag: "histoire",
+            rating: "??",
+            link: "https://www.decitre.fr/livres/naissance-de-la-france-9782081245471.html"
+          },{
             title: "Le monde chinois",
             subtitle: "Tome 1, De l'Age de Bronze au Moyen Age",
             author: "Jacques Gernet",
@@ -26,7 +36,7 @@
             year: 2006,
             image: "cover/le-monde-chinois.jpg",
             tag: "histoire",
-            rating: "??",
+            rating: "📚📚📚",
             link: "https://www.decitre.fr/livres/le-monde-chinois-9782266153683.html"
           },{
             title: "Une belle histoire de l'Homme",
