feat: add Quand d'autres hommes peuplait la Terre

--- a/books/index.html
+++ b/books/index.html
@@ -19,6 +19,16 @@
     <script type="text/javascript">
       var books = [{
           year: 2021, books: [{
+            title: "Quand d'autres hommes peuplait la Terre",
+            subtitle: "Nouveaux regards sur nos origines",
+            author: "Jean-Jacques Hublin",
+            pages: 272,
+            year: 2011,
+            image: "cover/quand-dautre-hommes-peuplait-la-terre.jpeg",
+            tag: "histoire",
+            rating: "??",
+            link: "https://editions.flammarion.com/quand-d-autres-hommes-peuplaient-la-terre/9782081252424"
+          },{
             title: "Naissance de la France",
             subtitle: "Le monde mérovingien",
             author: "Patrick Geary",
@@ -26,7 +36,7 @@
             year: 2011,
             image: "cover/naissance-de-la-france.jpeg",
             tag: "histoire",
-            rating: "??",
+            rating: "📚📚📚📚",
             link: "https://www.decitre.fr/livres/naissance-de-la-france-9782081245471.html"
           },{
             title: "Le monde chinois",
