--- a/books/index.html
+++ b/books/index.html
@@ -19,6 +19,16 @@
     <script type="text/javascript">
       var books = [{
           year: 2021, books: [{
+            title: "L'Urine, de l'or liquide au jardin",
+            subtitle: "Guide pratique pour produire ses fruits et légumes en utilisant les urines et composts locaux",
+            author: "Renaud de Looze",
+            pages: 142,
+            year: 2018,
+            image: "cover/urine-au-jardin.jpeg",
+            tag: "ecologie",
+            rating: "???",
+            link: "https://www.terran.fr/urine-or-liquide-jardin-de-looze-livre-editions-terran.html"
+          },{
             title: "Quand d'autres hommes peuplait la Terre",
             subtitle: "Nouveaux regards sur nos origines",
             author: "Jean-Jacques Hublin",
@@ -26,7 +36,7 @@
             year: 2011,
             image: "cover/quand-dautre-hommes-peuplait-la-terre.jpeg",
             tag: "histoire",
-            rating: "??",
+            rating: "📚📚📚📚📚",
             link: "https://editions.flammarion.com/quand-d-autres-hommes-peuplaient-la-terre/9782081252424"
           },{
             title: "Naissance de la France",
