feat: add L'odyssée des gènes & Les débits de l'élevage

--- a/books/index.html
+++ b/books/index.html
@@ -19,6 +19,26 @@
     <script type="text/javascript">
       var books = [{
           year: 2021, books: [{
+            title: "L'odyssée des gènes",
+            subtitle: "",
+            author: "Évelyne Heyer",
+            pages: 388,
+            year: 2020,
+            image: "cover/lodysee-des-genes.jpg",
+            tag: "histoire",
+            rating: "???",
+            link: "https://editions.flammarion.com/lodyssee-des-genes/9782081428225"
+          },{
+            title: "Les débuts de l'élevage",
+            subtitle: "",
+            author: "Jean-Denis Vigne",
+            pages: 192,
+            year: 2012,
+            image: "cover/les-debuts-de-lelevage.jpeg",
+            tag: "histoire",
+            rating: "📚📚📚📚📚",
+            link: "https://www.editions-lepommier.fr/les-debuts-de-lelevage"
+          },{
             title: "L'Urine, de l'or liquide au jardin",
             subtitle: "Guide pratique pour produire ses fruits et légumes en utilisant les urines et composts locaux",
             author: "Renaud de Looze",
@@ -26,7 +46,7 @@
             year: 2018,
             image: "cover/urine-au-jardin.jpeg",
             tag: "ecologie",
-            rating: "???",
+            rating: "📚📚📚",
             link: "https://www.terran.fr/urine-or-liquide-jardin-de-looze-livre-editions-terran.html"
           },{
             title: "Quand d'autres hommes peuplait la Terre",
