feat: add La grande amnésie écologique

--- a/books/index.html
+++ b/books/index.html
@@ -19,6 +19,16 @@
     <script type="text/javascript">
       var books = [{
           year: 2021, books: [{
+            title: "La grande amnésie écologique",
+            subtitle: "",
+            author: "Philippe jacques Dubois",
+            pages: 129,
+            year: 2012,
+            image: "cover/la-grande-amnesie.jpeg",
+            tag: "ecologie",
+            rating: "???",
+            link: "https://www.delachauxetniestle.com/livre/la-grande-amnesie-ecologique-3"
+          },{
             title: "L'odyssée des gènes",
             subtitle: "",
             author: "Évelyne Heyer",
@@ -26,7 +36,7 @@
             year: 2020,
             image: "cover/lodysee-des-genes.jpg",
             tag: "histoire",
-            rating: "???",
+            rating: "📚📚📚📚📚",
             link: "https://editions.flammarion.com/lodyssee-des-genes/9782081428225"
           },{
             title: "Les débuts de l'élevage",
