feat: add Une brève histoire du futur

--- a/books/index.html
+++ b/books/index.html
@@ -19,16 +19,27 @@
     <script type="text/javascript">
       var books = [{
           year: 2021, books: [{
-            title: "La grande amnésie écologique",
-            subtitle: "",
-            author: "Philippe jacques Dubois",
-            pages: 129,
-            year: 2012,
-            image: "cover/la-grande-amnesie.jpeg",
-            tag: "ecologie",
-            rating: "???",
-            link: "https://www.delachauxetniestle.com/livre/la-grande-amnesie-ecologique-3"
-          },{
+    title: "Une brève histoire du futur",
+    subtitle: "Comment la science va changer le monde",
+    author: "Michio Kaku",
+    pages: 336,
+    year: 2016,
+    image: "cover/une-breve-histoire-du-futur.jpeg",
+    tag: "essai",
+    rating: "en cours de lecture",
+    link: "https://www.decitre.fr/livres/une-breve-histoire-du-futur-9782081390584.html",
+  },
+  {
+    title: "La grande amnésie écologique",
+    subtitle: "",
+    author: "Philippe jacques Dubois",
+    pages: 129,
+    year: 2012,
+    image: "cover/la-grande-amnesie.jpeg",
+    tag: "ecologie",
+    rating: "📚📚📚📚",
+    link: "https://www.delachauxetniestle.com/livre/la-grande-amnesie-ecologique-3",
+  },{
             title: "L'odyssée des gènes",
             subtitle: "",
             author: "Évelyne Heyer",
