--- a/books/index.html
+++ b/books/index.html
@@ -16,6 +16,10 @@
       rel="stylesheet"
     />
     <link href="../style.css" rel="stylesheet" type="text/css" />
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📚</text></svg>"
+    />
     <script type="text/javascript">
       var books = [
         {
