--- a/books/index.html
+++ b/books/index.html
@@ -26,15 +26,25 @@
           year: 2021,
           books: [
             {
+              title: 'Les animaux ont une histoire',
+              subtitle: "",
+              author: 'Robert Delort',
+              pages: 503,
+              year: 1993,
+              image: 'cover/les-animaux-ont-une-histoire.jpeg',
+              tag: 'histoire',
+              rating: 'en cours de lecture',
+              link: 'https://www.seuil.com/ouvrage/les-animaux-ont-une-histoire-robert-delort/9782020195140',
+            },
+            {
               title: 'Les Voraces',
-              subtitle:
-                'Les élites et l\'argent sous Macron',
+              subtitle: "Les élites et l'argent sous Macron",
               author: 'Vincent Jauvert',
               pages: 216,
               year: 2020,
               image: 'cover/les-voraces.jpg',
               tag: 'politique',
-              rating: 'en cours de lecture',
+              rating: '📚📚📚',
               link: 'https://www.decitre.fr/livres/les-voraces-9782290238820.html',
             },
             {
@@ -46,7 +56,7 @@
               year: 2018,
               image: 'cover/la-mano-negra.jpg',
               tag: 'sport',
-              rating: 'en cours de lecture',
+              rating: '📚📚📚📚',
               link: 'https://www.romainmolina.com/livres/la-mano-negra/',
             },
             {
