feat: add Le plan Marshall

--- a/books/index.html
+++ b/books/index.html
@@ -26,14 +26,25 @@
           year: 2021,
           books: [
             {
+              title: 'Le plan Marshall',
+              subtitle: 'A l\'aube de la guerre froide',
+              author: 'Benn Steil',
+              pages: 683,
+              year: 2020,
+              image: 'cover/le-plan-marshall.jpeg',
+              tag: 'histoire',
+              rating: 'en cours de lecture',
+              link: 'https://www.lesbelleslettres.com/livre/4319-le-plan-marshall',
+            },
+            {
               title: 'Les animaux ont une histoire',
-              subtitle: "",
+              subtitle: '',
               author: 'Robert Delort',
               pages: 503,
               year: 1993,
               image: 'cover/les-animaux-ont-une-histoire.jpeg',
               tag: 'histoire',
-              rating: 'en cours de lecture',
+              rating: '📚📚📚',
               link: 'https://www.seuil.com/ouvrage/les-animaux-ont-une-histoire-robert-delort/9782020195140',
             },
             {
